--- a/scss/all/_layout.scss
+++ b/scss/all/_layout.scss
@@ -2,8 +2,9 @@
 @import "./header";
 @import "./main";
 @import "./footer";
-@import "./intro";
+@import "./page1sec1";
 @import "./page1sec2";
 @import "./page1sec3";
 @import "./page1sec4";
 @import "./page1sec5";
+@import "./page1sec6"
