--- a/scss/all/_page1sec2.scss
+++ b/scss/all/_page1sec2.scss
@@ -211,7 +211,7 @@
     font-style: normal;
     font-weight: 500;
     line-height: 24px;
-    border: none;
+    border: 2px solid transparent;
     margin-left: 470px;
     margin-top: 75px;
 
