--- a/css/style.css
+++ b/css/style.css
@@ -324,8 +324,13 @@ template {
 }
 
 header {
+  position: fixed;
+  z-index: 33;
+  top: 0;
   width: 100%;
   border-bottom: 2px solid silver;
+  -webkit-backdrop-filter: blur(25px);
+          backdrop-filter: blur(25px);
 }
 header .header_bg {
   background-color: black;
@@ -425,8 +430,175 @@ main {
 
 footer {
   width: 100%;
+  background-color: black;
+  height: 500px;
+  margin-top: 32px;
+  padding-top: 80px;
+}
+footer .footer_wrap {
+  display: flex;
+  gap: 87px;
+}
+footer .footer_wrap .fotwrap1 h1 {
+  color: var(--Text, #FAFAFA);
+  font-family: Inter;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 0.72px;
+}
+footer .footer_wrap .fotwrap1 h2 {
+  color: var(--Text, #FAFAFA);
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 28px;
+  margin-top: 24px;
+}
+footer .footer_wrap .fotwrap1 p {
+  color: var(--Text, #FAFAFA);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  margin-top: 24px;
+}
+footer .footer_wrap .fotwrap1 .inputwrap {
+  display: flex;
+  width: 217px;
+  align-items: center;
+  border-radius: 4px;
+  border: 2px solid var(--Text, #FAFAFA);
+  margin-top: 16px;
+}
+footer .footer_wrap .fotwrap1 .inputwrap input {
+  display: flex;
+  width: 217px;
+  padding: 12px 0px 12px 16px;
+  align-items: center;
+  background-color: transparent;
+  border: none;
+  color: white;
+  color: var(--Text, #FAFAFA);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+}
+footer .footer_wrap .fotwrap1 .inputwrap img {
+  position: absolute;
+  margin-left: 170px;
+}
+footer .footer_wrap .fotwrap2 h1 {
+  color: var(--Text, #FAFAFA);
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 28px;
+}
+footer .footer_wrap .fotwrap2 h2 {
+  width: 175px;
+  color: var(--Text, #FAFAFA);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  margin-top: 24px;
+}
+footer .footer_wrap .fotwrap2 p {
+  color: var(--Text, #FAFAFA);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  margin-top: 16px;
+}
+footer .footer_wrap .fotwrap2 h6 {
+  color: var(--Text, #FAFAFA);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  margin-top: 16px;
+}
+footer .footer_wrap .fotwrap3 h1 {
+  color: var(--Text, #FAFAFA);
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 28px;
+}
+footer .footer_wrap .fotwrap3 p {
+  color: var(--Text, #FAFAFA);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 45px;
+  width: 123px;
+}
+footer .footer_wrap .fotowrap4 h1 {
+  color: var(--Text, #FAFAFA);
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 28px;
+}
+footer .footer_wrap .fotowrap4 p {
+  color: var(--Text, #FAFAFA);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 45px;
+  width: 109px;
+}
+footer .footer_wrap .fotowrap5 h1 {
+  color: var(--Text, #FAFAFA);
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 28px;
+}
+footer .footer_wrap .fotowrap5 p {
+  color: var(--Text, #FAFAFA);
+  font-family: Poppins;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 18px;
+  opacity: 0.7;
+  margin-top: 24px;
+}
+footer .footer_wrap .fotowrap5 .qrcodewrap {
+  display: flex;
+  gap: 8px;
+  margin-top: 8px;
+}
+footer .footer_wrap .fotowrap5 .qrcodewrap div {
+  line-height: 20px;
+}
+footer .footer_wrap .iconswrap {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-top: 35px;
 }
 
+#section_one {
+  margin-top: 140px;
+}
 #section_one .swiper {
   display: flex;
   gap: 90px;
@@ -658,7 +830,7 @@ footer {
   font-style: normal;
   font-weight: 500;
   line-height: 24px;
-  border: none;
+  border: 2px solid transparent;
   margin-left: 470px;
   margin-top: 75px;
 }
@@ -740,7 +912,6 @@ footer {
 }
 #section_three .minicards .minicard:hover img {
   color: white;
-  background-color: white;
 }
 #section_three .minicards .minicard img {
   color: black;
@@ -1030,4 +1201,253 @@ footer {
 #section_fifth .texticon .sec3rili {
   display: flex;
   gap: 10px;
+}
+#section_fifth .cards {
+  display: flex;
+  gap: 45px;
+  overflow-y: hidden;
+  margin-top: 60px;
+}
+#section_fifth .cards_card1 {
+  width: 270px;
+  height: 350px;
+  border-radius: 10px;
+  position: relative;
+}
+#section_fifth .cards_card1 .wrappscrd h3 {
+  color: #000;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  margin-top: 16px;
+}
+#section_fifth .cards_card1 .wrappscrd .radioslind {
+  display: flex;
+  gap: 8px;
+  margin-top: 8px;
+}
+#section_fifth .cards_card1 .wrappscrd p {
+  color: var(--Secondary-2, #db4444);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+}
+#section_fifth .cards_card1 .wrappscrd p .skidka {
+  margin-left: 12px;
+  text-decoration: line-through;
+}
+#section_fifth .cards_card1 .wrappscrd .imgpwrap {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
+#section_fifth .cards_card1-game {
+  background-color: #f5f5f5;
+  width: 270px;
+  height: 250px;
+  position: relative;
+  border-radius: 9px 9px 0px 0px;
+}
+#section_fifth .cards_card1-game:hover .btn {
+  display: block;
+  cursor: pointer;
+}
+#section_fifth .cards_card1-game .btn {
+  position: absolute;
+  width: 270px;
+  height: 41px;
+  background-color: black;
+  color: white;
+  right: 0px;
+  bottom: 0px;
+  border: none;
+  display: none;
+  color: #fff;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+}
+#section_fifth .cards_card1-game img {
+  margin-left: 50px;
+  margin-top: -40px;
+}
+#section_fifth .cards_card1-game .foiz {
+  padding: 10px;
+}
+#section_fifth .cards_card1-game .foyizskidka {
+  background-color: #00FF66;
+  padding: 4px 12px;
+  width: 55px;
+  height: 26px;
+  border-radius: 4px;
+  color: white;
+  font-weight: 400;
+  font-family: Poppins;
+  font-size: 12px;
+}
+#section_fifth .cards_card1-game .foyiNew {
+  background-color: transparent;
+  color: #f5f5f5;
+  padding: 4px 12px;
+}
+#section_fifth .cards_card1-game .prosmotr {
+  display: block;
+  margin-left: 185px;
+  margin-top: px;
+  line-height: 40px;
+  margin-top: -25px;
+  margin-left: 175px;
+}
+#section_fifth .cards_card1-game .prosmotr .pult {
+  margin-left: 100px;
+  background-color: #db4444;
+}
+#section_fifth .cardss {
+  overflow-y: hidden;
+}
+#section_fifth .sec2btn {
+  display: inline-flex;
+  padding: 16px 48px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 4px;
+  background: var(--Button2, #DB4444);
+  color: var(--Text, #FAFAFA);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  border: 2px solid transparent;
+  margin-left: 480px;
+  margin-top: 75px;
+}
+#section_fifth .sec2btn:hover {
+  background-color: transparent;
+  color: black;
+  border: 2px solid rgba(0, 0, 0, 0.5);
+}
+
+#section_sixth {
+  margin-top: 140px;
+}
+#section_sixth .three_wrap {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+#section_sixth .three_wrap .crimson {
+  width: 20px;
+  height: 40px;
+  background-color: #db4444;
+  border-radius: 5px;
+}
+#section_sixth .three_wrap h1 {
+  color: var(--Secondary-2, #db4444);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 20px;
+}
+#section_sixth .texticon {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+#section_sixth .texticon h1 {
+  color: var(--Text2, #000);
+  font-family: Inter;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 48px;
+  letter-spacing: 1.44px;
+}
+#section_sixth .sec6wrap {
+  display: flex;
+  gap: 90px;
+  justify-content: center;
+  margin-top: 140px;
+}
+#section_sixth .sec6wrap .avto1 {
+  width: 249px;
+  height: 161px;
+}
+#section_sixth .sec6wrap .avto1 img {
+  width: 80px;
+  height: 80px;
+  margin-left: 85px;
+}
+#section_sixth .sec6wrap .avto1 h1 {
+  color: #000;
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 28px;
+  text-align: center;
+}
+#section_sixth .sec6wrap .avto1 p {
+  color: #000;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 21px;
+}
+#section_sixth .gridwrap {
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  grid-template-rows: repeat(2, auto);
+  row-gap: 30px;
+  -moz-column-gap: 30px;
+       column-gap: 30px;
+  margin-top: 60px;
+}
+#section_sixth .gridwrap .card1 {
+  grid-column: 1/3;
+  grid-row: 1/3;
+  border-radius: 4px;
+}
+#section_sixth .gridwrap .card2 {
+  grid-column: 3/5;
+  grid-row: 1/2;
+}
+#section_sixth .gridwrap .card3 {
+  grid-column: 3/4;
+  grid-row: 2/3;
+}
+#section_sixth .gridwrap .card4 {
+  grid-column: 4/5;
+  grid-row: 2/3;
+  margin-right: 40px;
+}
+#section_sixth .pagestart {
+  margin-left: 1180px;
+  cursor: pointer;
+  margin-top: 62px;
+  background-color: white;
+  border-radius: 50%;
+  width: 46px;
+  height: 46px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+#section_sixth .pagestart:hover {
+  color: blue;
+  background-color: #97db44;
+  color: white;
+}
+#section_sixth .pagestart:hover svg path {
+  stroke: white;
 }/*# sourceMappingURL=style.css.map */
