--- a/scss/all/_footer.scss
+++ b/scss/all/_footer.scss
@@ -1,4 +1,212 @@
 footer{
     width: 100%;
-    // codes
+    background-color: black;
+    height: 500px;
+    margin-top: 32px;
+    padding-top: 80px;
+    
+
+
+    .footer_wrap{
+        display: flex;
+        gap: 87px;
+
+        .fotwrap1{
+
+            & h1{
+                color: var(--Text, #FAFAFA);
+                font-family: Inter;
+                font-size: 24px;
+                font-style: normal;
+                font-weight: 700;
+                line-height: 24px;
+                letter-spacing: 0.72px;
+            }
+
+            & h2{
+                color: var(--Text, #FAFAFA);
+                font-family: Poppins;
+                font-size: 20px;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 28px; 
+                margin-top: 24px;
+            }
+
+
+            & p{
+                color: var(--Text, #FAFAFA);
+                font-family: Poppins;
+                font-size: 16px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 24px;
+                margin-top: 24px;
+            }
+
+            .inputwrap{
+                display: flex;
+                width: 217px;
+                align-items: center;
+                border-radius: 4px;
+                border: 2px solid var(--Text, #FAFAFA);
+                margin-top: 16px;
+
+
+                & input{
+                    display: flex;
+                    width: 217px;
+                    padding: 12px 0px 12px 16px;
+                    align-items: center;
+                    background-color: transparent;
+                    border: none;
+                    color: white;
+                    color: var(--Text, #FAFAFA);
+                    font-family: Poppins;
+                    font-size: 16px;
+                    font-style: normal;
+                    font-weight: 400;
+                    line-height: 24px;
+                }
+
+                & img{
+                    position: absolute;
+                    margin-left: 170px;
+
+                }
+            }
+        }
+
+        .fotwrap2{
+
+            & h1{
+                color: var(--Text, #FAFAFA);
+                font-family: Poppins;
+                font-size: 20px;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 28px;
+            }
+
+            & h2{
+                width: 175px;
+                color: var(--Text, #FAFAFA);
+                font-family: Poppins;
+                font-size: 16px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 24px;
+                margin-top: 24px; 
+            }
+
+            & p{
+                color: var(--Text, #FAFAFA);
+                font-family: Poppins;
+                font-size: 16px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 24px; 
+                margin-top: 16px;
+            }
+
+            & h6{
+                color: var(--Text, #FAFAFA);
+                font-family: Poppins;
+                font-size: 16px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 24px; 
+                margin-top: 16px;
+            }
+        }
+        
+
+        .fotwrap3{
+             
+
+            & h1{
+                color: var(--Text, #FAFAFA);
+                font-family: Poppins;
+                font-size: 20px;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 28px; 
+            }
+
+            & p{
+                color: var(--Text, #FAFAFA);
+                font-family: Poppins;
+                font-size: 16px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 45px;
+                width: 123px;
+            }
+        }
+        
+
+        .fotowrap4{
+        
+            & h1{
+                color: var(--Text, #FAFAFA);
+                font-family: Poppins;
+                font-size: 20px;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 28px; 
+            }
+
+            & p{
+                color: var(--Text, #FAFAFA);
+                font-family: Poppins;
+                font-size: 16px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 45px;
+                width: 109px;
+            }
+        }
+
+        .fotowrap5{
+
+            & h1{
+                color: var(--Text, #FAFAFA);
+                font-family: Poppins;
+                font-size: 20px;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 28px; 
+            }
+
+            & p{
+                color: var(--Text, #FAFAFA);
+                font-family: Poppins;
+                font-size: 12px;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 18px;
+                opacity: 0.7;
+                margin-top: 24px;
+            }
+
+            .qrcodewrap{
+                display: flex;
+                gap: 8px;
+                margin-top: 8px;
+
+
+                & div{
+                    line-height: 20px;
+                }
+            }
+        }
+
+        .iconswrap{
+            display: flex;
+            align-items: center;
+            gap: 20px;
+            margin-top: 35px;
+            
+        }
+    }
 }
