--- a/style.scss
+++ b/style.scss
@@ -6,3 +6,5 @@
 @import "./scss/mixin";
 @import "./scss/extend";
 @import "./scss/all/layout";
+@import "./scss/page2/page2sec1";
+@import "./scss/Login.Page3/page3sec1";
