--- a/css/style.css
+++ b/css/style.css
@@ -316,6 +316,10 @@ template {
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+  width: 0px;
+}
+
 .container {
   max-width: 1240px;
   margin: 0 auto;
@@ -431,7 +435,7 @@ main {
 footer {
   width: 100%;
   background-color: black;
-  height: 500px;
+  height: 480px;
   margin-top: 32px;
   padding-top: 80px;
 }
@@ -594,6 +598,26 @@ footer .footer_wrap .iconswrap {
   align-items: center;
   gap: 20px;
   margin-top: 35px;
+}
+footer .footerend {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 16px;
+  gap: 6px;
+}
+footer .footerend p {
+  color: var(--Primary, #FFF);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+}
+footer #foterborder {
+  border-top: 1px solid white;
+  opacity: 0.3;
+  margin-top: 60px;
 }
 
 #section_one {
@@ -1450,4 +1474,154 @@ footer .footer_wrap .iconswrap {
 }
 #section_sixth .pagestart:hover svg path {
   stroke: white;
+}
+
+#page2sec1 {
+  margin-top: 205px;
+}
+#page2sec1 .page2_wrap {
+  display: flex;
+  gap: 140px;
+}
+#page2sec1 .page2_wrap .content1wrap {
+  width: 805px;
+  height: 781px;
+}
+#page2sec1 .page2_wrap .content2wrap h1 {
+  color: var(--Text2, #000);
+  font-family: Inter;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 30px;
+  letter-spacing: 1.44px;
+  margin-top: 90px;
+}
+#page2sec1 .page2_wrap .content2wrap h2 {
+  color: var(--Text2, #000);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+}
+#page2sec1 .page2_wrap .content2wrap input {
+  border: none;
+  border-bottom: 1px solid black;
+  opacity: 0.5;
+  background-color: transparent;
+  outline: none;
+  width: 371px;
+}
+#page2sec1 .page2_wrap .content2wrap .imput1 {
+  margin-top: 48px;
+}
+#page2sec1 .page2_wrap .content2wrap .imput2 {
+  margin-top: 48px;
+}
+#page2sec1 .page2_wrap .content2wrap .imput3 {
+  margin-top: 48px;
+}
+#page2sec1 .page2_wrap .content2wrap .btnc1 button {
+  display: flex;
+  padding: 16px 122px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  color: var(--Text, #FAFAFA);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  border-radius: 4px;
+  background: var(--Button2, #DB4444);
+  border: 2px solid transparent;
+  margin-top: 40px;
+}
+#page2sec1 .page2_wrap .content2wrap .btnc1 button:hover {
+  background-color: transparent;
+  color: #000;
+  border: 2px solid rgba(0, 0, 0, 0.5);
+}
+#page2sec1 .page2_wrap .btnc2 button {
+  padding: 16px 107px;
+  align-items: flex-start;
+  gap: 10px;
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.4);
+  margin-top: 16px;
+  display: flex;
+  align-items: center;
+}
+#page2sec1 .page2_wrap .login {
+  display: flex;
+  margin-top: 32px;
+  gap: 16px;
+  margin-left: 80px;
+}
+#page2sec1 .page2_wrap .login p {
+  color: var(--Text2, #000);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  opacity: 0.7;
+}
+#page2sec1 .page2_wrap .login a {
+  color: var(--Text2, #000);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  text-decoration: none;
+  border-bottom: 1px solid #000;
+  opacity: 0.7;
+}
+
+#page2sec1 {
+  margin-top: 205px;
+}
+#page2sec1 .pag3wrap {
+  margin-top: 180px;
+}
+#page2sec1 .content2wrap {
+  margin-top: 100px;
+}
+#page2sec1 .btnpg3 {
+  margin-top: 40px;
+  display: flex;
+  align-items: center;
+  gap: 90px;
+}
+#page2sec1 .btnpg3 button {
+  display: flex;
+  padding: 16px 48px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 4px;
+  background: var(--Button2, #DB4444);
+  border: 2px solid transparent;
+  color: var(--Text, #FAFAFA);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+}
+#page2sec1 .btnpg3 button:hover {
+  background-color: transparent;
+  border: 2px solid rgba(0, 0, 0, 0.5);
+  color: #000;
+}
+#page2sec1 .btnpg3 .logins {
+  color: var(--Secondary-2, #DB4444);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
 }/*# sourceMappingURL=style.css.map */
