--- a/scss/all/_header.scss
+++ b/scss/all/_header.scss
@@ -84,6 +84,10 @@ header {
                     font-style: normal;
                     font-weight: 400;
                     line-height: 24px;
+
+                    &:hover{
+                        border-bottom: 2px solid silver;
+                    }
                     
                    
                     &:hover{
