--- a/style.scss
+++ b/style.scss
@@ -8,3 +8,8 @@
 @import "./scss/all/layout";
 @import "./scss/page2/page2sec1";
 @import "./scss/Login.Page3/page3sec1";
+@import "./scss/wishlistpage/page4sec1";
+@import "./scss/wishlistpage/page4sec2.scss";
+@import "./scss/page5/page5wrap";
+@import "./scss/page6/page6wrap";
+@import "./scss/page7/page7sec1";
