--- a/css/style.css
+++ b/css/style.css
@@ -1279,11 +1279,11 @@ footer #foterborder {
   position: relative;
   border-radius: 9px 9px 0px 0px;
 }
-#section_fifth .cards_card1-game:hover .btn {
+#section_fifth .cards_card1-game:hover .btnk {
   display: block;
   cursor: pointer;
 }
-#section_fifth .cards_card1-game .btn {
+#section_fifth .cards_card1-game .btnk {
   position: absolute;
   width: 270px;
   height: 41px;
@@ -1299,6 +1299,7 @@ footer #foterborder {
   font-style: normal;
   font-weight: 500;
   line-height: 24px;
+  display: none;
 }
 #section_fifth .cards_card1-game img {
   margin-left: 50px;
@@ -2236,4 +2237,150 @@ footer #foterborder {
   background-color: transparent;
   border: 2px solid rgba(0, 0, 0, 0.5);
   color: #000;
+}
+
+#Checkout_wrapper {
+  width: 100%;
+  margin-top: 225px;
+}
+#Checkout_wrapper .checkout_texts {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+#Checkout_wrapper .checkout_texts a {
+  color: var(--Text2, #000);
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 21px;
+  opacity: 0.5;
+  text-decoration: none;
+}
+#Checkout_wrapper .checkout_texts .slew {
+  margin-left: 12px;
+}
+#Checkout_wrapper .Cheskout__wrapper-imputs {
+  margin-top: 80px;
+}
+#Checkout_wrapper .Cheskout__wrapper-imputs--form {
+  margin-bottom: 140px;
+  display: flex;
+  align-items: center;
+  gap: 137px;
+}
+#Checkout_wrapper .Cheskout__wrapper-imputs--form--informacion h2 {
+  color: var(--Text2, #000);
+  font-family: Inter;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 30px;
+  letter-spacing: 1.44px;
+  margin-bottom: 48px;
+}
+#Checkout_wrapper .Cheskout__wrapper-imputs--form--informacion label p {
+  color: var(--Text2, #000);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  opacity: 0.4;
+  margin-bottom: 8px;
+}
+#Checkout_wrapper .Cheskout__wrapper-imputs--form--informacion label p:hover {
+  cursor: pointer;
+  opacity: 1;
+}
+#Checkout_wrapper .Cheskout__wrapper-imputs--form--informacion label input {
+  width: 470px;
+  height: 50px;
+  border-radius: 4px;
+  background: var(--Secondary, #f5f5f5);
+  border: none;
+  margin-bottom: 32px;
+  padding: 8px;
+  color: #333333;
+}
+#Checkout_wrapper .Cheskout__wrapper-imputs--form--informacion p {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  color: #000;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+}
+#Checkout_wrapper .Cheskout__wrapper-imputs--form--informacion p input {
+  width: 24px;
+  height: 24px;
+}
+#Checkout_wrapper .Cheskout__wrapper-imputs--form--informacion p input:checked {
+  background: red;
+}
+#Checkout_wrapper .Cheskout__wrapper-imputs--form--selectedproduct--itim {
+  list-style: none;
+}
+#Checkout_wrapper .Cheskout__wrapper-imputs--form--selectedproduct--itim--list {
+  margin-bottom: 32px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+#Checkout_wrapper .Cheskout__wrapper-imputs--form--selectedproduct--itim--list p {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  color: var(--Text2, #000);
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+}
+#Checkout_wrapper .Cheskout__wrapper-imputs--form--selectedproduct--itim--list p button {
+  margin-right: -70px;
+}
+#Checkout_wrapper .Cheskout__wrapper-imputs--form--selectedproduct--itim--list p input {
+  width: 300px;
+  display: flex;
+  padding: 16px 24px;
+  align-items: center;
+  border-radius: 4px;
+  border: 1px solid #000;
+  background: transparent;
+}
+#Checkout_wrapper .Cheskout__wrapper-imputs--form--selectedproduct--itim--list p .radio {
+  width: 24px;
+  height: 24px;
+  border: 1px solid black;
+}
+#Checkout_wrapper .Cheskout__wrapper-imputs--form--selectedproduct--itim--list div {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+#Checkout_wrapper .Cheskout__wrapper-imputs--form--selectedproduct--itim--list button {
+  display: flex;
+  padding: 16px 48px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 4px;
+  color: #f5f5f5;
+  color: var(--Text, #fafafa);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  background: var(--Button2, #db4444);
+  border: 2px solid transparent;
+}
+#Checkout_wrapper .Cheskout__wrapper-imputs--form--selectedproduct--itim--list button:hover {
+  background-color: transparent;
+  color: #000;
+  border: 2px solid rgba(0, 0, 0, 0.5);
 }/*# sourceMappingURL=style.css.map */
