--- a/scss/all/_page1sec5.scss
+++ b/scss/all/_page1sec5.scss
@@ -106,13 +106,13 @@
             border-radius: 9px 9px 0px 0px;
     
             &:hover {
-              .btn {
+              .btnk {
                 display: block;
                 cursor: pointer;
               }
             }
     
-            .btn {
+            .btnk{
               position: absolute;
               width: 270px;
               height: 41px;
@@ -128,6 +128,7 @@
               font-style: normal;
               font-weight: 500;
               line-height: 24px;
+              display: none;
             }
     
             img {
