--- a/css/style.css
+++ b/css/style.css
@@ -2383,4 +2383,193 @@ footer #foterborder {
   background-color: transparent;
   color: #000;
   border: 2px solid rgba(0, 0, 0, 0.5);
+}
+
+#page8sec1 {
+  margin-top: 225px;
+}
+#page8sec1 .homemy_wrap {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+#page8sec1 .textstwo {
+  display: flex;
+  gap: 8px;
+}
+#page8sec1 .textstwo p {
+  color: var(--Text2, #000);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  opacity: 0.5;
+}
+#page8sec1 .textstwo span {
+  color: var(--Text2, #000);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+}
+#page8sec1 .welmdrimel h2 {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+#page8sec1 .welmdrimel h2 .welcom {
+  color: var(--Text2, #000);
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 21px;
+}
+#page8sec1 .welmdrimel h2 .mdrimel {
+  color: var(--Secondary-2, #db4444);
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 21px;
+}
+#page8sec1 .page7sec2_wrap {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 140px;
+  gap: 100px;
+  margin-top: 80px;
+}
+#page8sec1 .page7sec2_wrap .about_departmentwrap ul li {
+  margin-bottom: 16px !important;
+  list-style-type: none;
+  margin-top: 16px;
+}
+#page8sec1 .page7sec2_wrap .about_departmentwrap ul li a {
+  text-decoration: none;
+  color: var(--Text2, #000);
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+}
+#page8sec1 .page7sec2_wrap .about_departmentwrap ul li ul li {
+  margin-left: 35px;
+  opacity: 0.5;
+  margin-bottom: 8px;
+}
+#page8sec1 .page7sec2_wrap .informacion {
+  width: 870px;
+  border-radius: 4px;
+  background: var(--Primary, #fff);
+  box-shadow: 0px 1px 13px 0px rgba(0, 0, 0, 0.05);
+}
+#page8sec1 .page7sec2_wrap .informacion form {
+  padding: 40px 80px;
+}
+#page8sec1 .page7sec2_wrap .informacion form h3 {
+  color: var(--Secondary-2, #db4444);
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 28px; /* 140% */
+  margin-bottom: 16px;
+}
+#page8sec1 .page7sec2_wrap .informacion form .firstlastname {
+  display: flex !important;
+  justify-content: space-between;
+  margin-bottom: 24px;
+}
+#page8sec1 .page7sec2_wrap .informacion form .firstlastname label p {
+  color: var(--Text2, #000);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  margin-bottom: 8px;
+}
+#page8sec1 .page7sec2_wrap .informacion form .firstlastname label input {
+  width: 330px;
+  height: 50px;
+  padding: 13px 16px;
+  border: none;
+  background-color: #f5f5f5;
+}
+#page8sec1 .page7sec2_wrap .informacion form .Email_addres {
+  display: flex !important;
+  justify-content: space-between;
+  margin-bottom: 24px;
+}
+#page8sec1 .page7sec2_wrap .informacion form .Email_addres label p {
+  color: var(--Text2, #000);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  margin-bottom: 8px;
+}
+#page8sec1 .page7sec2_wrap .informacion form .Email_addres label input {
+  width: 330px;
+  height: 50px;
+  padding: 13px 16px;
+  border: none;
+  background-color: #f5f5f5;
+}
+#page8sec1 .page7sec2_wrap .informacion form .Password_Changes {
+  margin-bottom: 24px;
+}
+#page8sec1 .page7sec2_wrap .informacion form .Password_Changes p {
+  color: var(--Text2, #000);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  margin-bottom: 8px;
+}
+#page8sec1 .page7sec2_wrap .informacion form .Password_Changes input {
+  background-color: #f5f5f5;
+  padding: 13px 16px;
+  height: 50px;
+  display: block;
+  width: 100%;
+  margin-bottom: 16px;
+  border: none;
+}
+#page8sec1 .page7sec2_wrap .informacion form .secend_btn {
+  margin-top: 20px;
+  display: flex;
+  gap: 32px;
+  justify-content: flex-end;
+  color: var(--Text, #fafafa);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+}
+#page8sec1 .page7sec2_wrap .informacion form .secend_btn .cancel {
+  width: 80px;
+  height: 56px;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+}
+#page8sec1 .page7sec2_wrap .informacion form .secend_btn .save {
+  padding: 16px 0;
+  width: 214px;
+  height: 56px;
+  cursor: pointer;
+  border: 2px solid transparent;
+  border-radius: 4px;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px;
+  color: white;
+  background-color: #db4444;
+}
+#page8sec1 .page7sec2_wrap .informacion form .secend_btn .save:hover {
+  border: 2px solid rgba(0, 0, 0, 0.5);
+  color: black;
+  background-color: transparent;
+  transition: all 0.1s linear;
 }/*# sourceMappingURL=style.css.map */
