--- a/style.scss
+++ b/style.scss
@@ -13,3 +13,4 @@
 @import "./scss/page5/page5wrap";
 @import "./scss/page6/page6wrap";
 @import "./scss/page7/page7sec1";
+@import "./scss/page8/page8sec1"
