--- a/scss/page8/_page8sec1.scss
+++ b/scss/page8/_page8sec1.scss
@@ -11,12 +11,13 @@
     display: flex;
     gap: 8px;
 
-    p {
+    a {
       color: var(--Text2, #000);
       font-size: 14px;
       font-weight: 400;
       line-height: 21px;
       opacity: 0.5;
+      text-decoration: none;
     }
     span {
       color: var(--Text2, #000);
